--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@breezystack/lamejs": "^1.2.7",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
+    "apexcharts": "^4.2.0",
     "axios": "^1.7.7",
     "lamejs": "^1.2.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
+    "vue3-apexcharts": "^1.8.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
