--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,10 @@
     "@heroicons/vue": "^2.2.0",
     "apexcharts": "^4.2.0",
     "axios": "^1.7.7",
+    "flowbite": "^2.5.2",
+    "flowbite-vue": "^0.1.6",
     "lamejs": "^1.2.1",
+    "swiper": "^11.2.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue3-apexcharts": "^1.8.0",
